journal cards readability fix

--- a/frontend/src/components/journal/Journal.css
+++ b/frontend/src/components/journal/Journal.css
@@ -1,4 +1,3 @@
-
 .journal-graph-card {
     margin-left: 10px;
 }
@@ -19,7 +18,7 @@
     text-align: left;
     /* Border */
     border-style: solid;
-    border-width: 2px;
+    border-width: 0px;
     border-radius: 20px;
     border-color: white;
     /* Spacing */
@@ -30,21 +29,54 @@
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
+.green-outline {
+    border-color: green;
+    box-shadow: 0 8px 16px 0 green;
+}
+
+.yellow-outline {
+    border-color: yellow;
+    box-shadow: 0 8px 16px 0 yellow;
+}
+
+.gray-outline {
+    border-color: #282c34;
+    box-shadow: 0 8px 16px 0 #282c34;
+}
+
+.orange-outline {
+    border-color: orange;
+    box-shadow: 0 8px 16px 0 orange;
+}
+
+.red-outline {
+    border-color: #dd4875;
+    box-shadow: 0 8px 16px 0 #dd4875;
+}
+
 .journal-card:hover {
     border-width: 2px;
     border-color: #282c34;
+    box-shadow: none;
 }
 
 .date-journal-card {
     /* Text */
-    font-size: 30px;
+    font-size: 20px;
     color: #646569;
     font-weight: 800;
     /* Spacing */
-    display: flex;
-    flex-direction: row;
+    /* display: flex; */
+    /* flex-direction: row; */
     justify-content: space-around;
     margin: 0px 10px 0px 10px;
+}
+
+.date-title-journal-card {
+    color: #282c34;
+    margin-bottom: 50px;
+    font-size: 30px;
+    text-decoration-line: underline;
 }
 
 .title-journal-card {
@@ -86,7 +118,7 @@
     border-radius: 10px;
     font-weight: 800;
     letter-spacing: 2px;
-    padding: 10px;
+    padding: 5px 10px 5px 10px;
     font-size: 12px;
     background-color: #8884d8;
     color: white;
